--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,8 +1,63 @@
-@import url('https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap');
+@import 'loader';
+
+@import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
     --color-purple: #9356DC ;
     --color-pink: #FF79DA;
     --color-green: #99E2D0;
+    --color-grey: #353535;
+}
+
+* {
+    box-sizing: border-box;
+    position: relative;
+
+}
+
+html,
+body {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', Arial, sans-serif;
+}
+
+.container {
+    width: 100%;
+    max-width: 375px;
+    margin: 0 auto;
+    padding: 0 25px;
+    overflow: hidden;
+}
+
+.heart-checkbox {
+    display: none; /* Masquer la case à cocher */
+}
+
+.heart-checkbox + label #heart__nocheck{
+    color: red; /* Couleur de base du cœur */
+    cursor: pointer;
+    display: flex;
+}
+
+.heart-checkbox + label #heart__check {
+   display: none;
+}
+
+.heart-checkbox:checked + label #heart__check {
+    color: blue;
+    display: flex;
+}
+
+.heart-checkbox:checked + label #heart__nocheck {
+    display: none;
+}
+
+
+
+
+fa-heart {
+    pointer-events: none;
 }
