--- a/css/restaurants.css
+++ b/css/restaurants.css
@@ -1,8 +1,8 @@
-@charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&family=Shrikhand&display=swap");
 .container__loader {
-  position: absolute;
+  position: fixed;
+  top: 0;
+  left: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -64,13 +64,35 @@
   }
   100% {
     opacity: 0;
+    z-index: 0;
   }
 }
+.header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
+  z-index: 1;
+}
+
+.header__logo {
+  font-family: "Shrikhand";
+  margin: 14px 0;
+  font-size: 30px;
+  font-weight: 400;
+  text-align: center;
+}
+
 :root {
   --color-purple: #9356DC ;
   --color-pink: #FF79DA;
   --color-green: #99E2D0;
   --color-grey: #353535;
+  --color-grey2: #EAEAEA;
+  --color-grey3: #F6F6F6;
+  --color-grey4: #7E7E7E;
+  --color-black: #101010;
+  --color-white: #FFF;
 }
 
 * {
@@ -84,41 +106,20 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Roboto", Arial, sans-serif;
+  counter-reset: mycounter;
+}
+
+a {
+  text-decoration: none;
+  color: var(--color-black);
+  cursor: pointer;
 }
 
 .container {
   width: 100%;
   max-width: 375px;
   margin: 0 auto;
-  padding: 0 25px;
   overflow: hidden;
 }
 
-.heart-checkbox {
-  display: none; /* Masquer la case à cocher */
-}
-
-.heart-checkbox + label #heart__nocheck {
-  color: red; /* Couleur de base du cœur */
-  cursor: pointer;
-  display: flex;
-}
-
-.heart-checkbox + label #heart__check {
-  display: none;
-}
-
-.heart-checkbox:checked + label #heart__check {
-  color: blue;
-  display: flex;
-}
-
-.heart-checkbox:checked + label #heart__nocheck {
-  display: none;
-}
-
-fa-heart {
-  pointer-events: none;
-}
-
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=restaurants.css.map */
