--- a/sass/components/loader.scss
+++ b/sass/components/loader.scss
@@ -1,5 +1,7 @@
 .container__loader {
-    position: absolute;
+    position: fixed;
+    top: 0;
+    left: 0;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -62,5 +64,6 @@
 
     100% {
         opacity: 0;
+        z-index: 0;
     }
 }
