--- a/sass/restaurants.scss
+++ b/sass/restaurants.scss
@@ -1,3 +1,5 @@
 @import './components/loader.scss';
+@import './components/heart.scss';
 @import './components/header.scss';
+@import './components/footer.scss';
 @import './style.scss';
