--- a/sass/style.scss
+++ b/sass/style.scss
@@ -4,6 +4,7 @@
     --color-purple: #9356DC ;
     --color-pink: #FF79DA;
     --color-green: #99E2D0;
+    --color-green2: #008766;
     --color-grey: #353535;
     --color-grey2: #EAEAEA;
     --color-grey3: #F6F6F6;
