--- a/css/home.css
+++ b/css/home.css
@@ -67,6 +67,26 @@
     z-index: 0;
   }
 }
+.heart-checkbox {
+  display: none;
+}
+
+.heart {
+  stroke: var(--color-black);
+  z-index: 1;
+  cursor: pointer;
+}
+
+.heart-checkbox:checked + label .heart {
+  fill: url(#paint0_linear_148695_527);
+  stroke: url(#paint0_linear_148695_527);
+}
+
+.heart-checkbox:hover + label .heart {
+  fill: url(#paint0_linear_148695_527);
+  stroke: url(#paint0_linear_148695_527);
+}
+
 .header {
   display: flex;
   justify-content: center;
@@ -126,6 +146,7 @@
   --color-purple: #9356DC ;
   --color-pink: #FF79DA;
   --color-green: #99E2D0;
+  --color-green2: #008766;
   --color-grey: #353535;
   --color-grey2: #EAEAEA;
   --color-grey3: #F6F6F6;
@@ -311,16 +332,15 @@ a {
 .section__restaurants .restaurants--card .cards {
   position: relative;
   width: calc(100% - 40px);
-  height: 250px;
   margin-bottom: 18px;
   background-color: var(--color-white);
-  border-radius: 15px 15px 0 0;
-  border: 2px pink solid;
+  border-radius: 15px;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1);
 }
 .section__restaurants .restaurants--card .cards .restaurants--card__figure {
   position: relative;
   width: 100%;
-  height: 230px;
+  height: 174px;
   border-radius: 15px 15px 0 0;
   overflow: hidden;
 }
@@ -328,14 +348,38 @@ a {
   position: absolute;
   width: 100%;
   height: 100%;
-  margin-top: -57px;
   object-fit: cover;
 }
-.section__restaurants .restaurants--card .cards .restaurants--card__description {
+.section__restaurants .restaurants--card .cards .restaurants--card__figure .card__figure--tag {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 12px;
+  right: 12px;
+  border-radius: 2px;
+  padding: 6px 8px;
+  text-align: center;
+  font-family: Roboto;
+  font-size: 14px;
+  font-weight: 500;
+  background-color: var(--color-green);
+  color: var(--color-green2);
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
+}
+.section__restaurants .restaurants--card .cards .restaurants--card__description {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 26px 0 14px;
+}
+.section__restaurants .restaurants--card .cards .restaurants--card__description .card__description--text .card__title {
+  font-size: 18px;
+  font-weight: 700;
+  margin: 16px 0 4px 0;
+}
+.section__restaurants .restaurants--card .cards .restaurants--card__description .card__description--text .card__subtitle {
+  margin: 0;
+  margin-bottom: 12px;
+  font-size: 17px;
+  font-weight: 300;
 }
 
 /*# sourceMappingURL=home.css.map */
