--- a/sass/home.scss
+++ b/sass/home.scss
@@ -169,16 +169,15 @@
         .cards {
             position: relative;
             width: calc(100% - 40px);
-            height: 250px;
             margin-bottom: 18px;
             background-color: var(--color-white);
-            border-radius: 15px 15px 0 0;
-            border: 2px pink solid;
+            border-radius: 15px;
+            box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.10);
     
             .restaurants--card__figure {
                 position: relative;
                 width: 100%;
-                height: 230px;
+                height: 174px;
                 border-radius: 15px 15px 0 0;
                 overflow: hidden;
 
@@ -186,16 +185,45 @@
                     position: absolute;
                     width: 100%;
                     height: 100%;
-                    margin-top: -57px;
                     object-fit: cover;
+                }
+
+                .card__figure--tag {
+                    position: absolute;
+                    top: 12px;
+                    right: 12px;
+                    border-radius: 2px;
+                    padding: 6px 8px;
+                    text-align: center;
+                    font-family: Roboto;
+                    font-size: 14px;
+                    font-weight: 500;
+                    background-color: var(--color-green) ;
+                    color: var(--color-green2);
+                    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
                 }
             }
 
             .restaurants--card__description {
-                position: absolute;
-                top: 0;
-                left: 0;
                 display: flex;
+                justify-content: space-between;
+                align-items: center;
+                margin: 0 26px 0 14px;
+
+                .card__description--text {
+                    .card__title {
+                        font-size: 18px;
+                        font-weight: 700;
+                        margin: 16px 0 4px 0;
+                    }
+
+                    .card__subtitle {
+                        margin: 0;
+                        margin-bottom: 12px;
+                        font-size: 17px;
+                        font-weight: 300;
+                    }
+                }
             }
         }
     }
