--- a/css/home.css
+++ b/css/home.css
@@ -88,19 +88,28 @@
 }
 
 .header {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
   z-index: 1;
 }
-
-.header__logo {
+.header .header__logo {
   font-family: "Shrikhand";
   margin: 14px 0;
   font-size: 30px;
   font-weight: 400;
   text-align: center;
+  cursor: pointer;
+}
+.header .backToHome {
+  position: absolute;
+  left: 18px;
+}
+.header .backToHome .backToHome__svg {
+  width: 30px;
+  height: 30px;
 }
 
 .footer {
