--- a/sass/restaurants.scss
+++ b/sass/restaurants.scss
@@ -3,3 +3,145 @@
 @import './components/header.scss';
 @import './components/footer.scss';
 @import './style.scss';
+
+.banner {
+    position: relative;
+    width: 100%;
+    height: 275px;
+    overflow: hidden;
+
+    .banner__img {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        object-fit: cover
+    }
+}
+
+.menu {
+    background-color: var(--color-grey3);
+    border-radius: 40px 40px 0px 0px;
+    margin-top: -55px;
+
+    .menu__description {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 32px 40px 0 16px;
+
+        .menu__title {
+            margin: 0;
+            font-family: Shrikhand;
+            font-size: 28px;
+            font-weight: 400;
+        }
+    }
+
+    .section__menu {
+        display: flex;
+        flex-direction: column;
+
+        .menu--section__title {
+            position: relative;
+            font-family: Roboto;
+            font-size: 16px;
+            font-weight: 300;
+            text-transform: uppercase;
+            padding-left: 16px;
+            margin: 42px 0 0 0;
+
+            &::after {
+                content: "";
+                display: block;
+                position: absolute;
+                margin-top: 4px;
+                width: 40px;
+                height: 3px;
+                background-color: var(--color-green);
+              }
+        }
+
+        .menu--section__choices {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            padding: 0;
+            margin: 0;
+        
+            .menu__choice {
+                display: flex;
+                width: calc(100% - 32px);
+                list-style: none;
+                margin-top: 12px;
+                background-color: var(--color-white);
+                border-radius: 15px;
+                box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.10);
+                cursor: pointer;
+
+                &:first-child {
+                    margin-top: 16px;
+                }
+
+                .menu__input {
+                    display: none;
+                }
+
+                .menu__label {
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    width: 100%;
+                    padding: 16px;
+
+                    .choice__description {
+                        .choice__title {
+                            margin: 0;
+                            margin-bottom: 4px;
+                            text-overflow: ellipsis;
+                            white-space: nowrap;
+                            font-family: Roboto;
+                            font-size: 18px;
+                            font-weight: 500;
+                        }
+
+                        .choice__accompaniement {
+                            margin: 0;
+                            text-overflow: ellipsis;
+                            white-space: nowrap;
+                            font-family: Roboto;
+                            font-size: 15px;
+                            font-weight: 300;
+                        }
+                    }
+
+                    .menu__price--and--check {
+                        display: flex;
+
+                        .menu__price {
+                            margin-right: 14px;
+                        }
+                        
+                        .menu__check {
+                        
+                          
+                        }
+                    }
+                }
+            }
+
+        }
+    }
+}
+
+.button__menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 40px auto;
+
+    .menu__button {
+    
+
+    }
+}
