--- a/sass/home.scss
+++ b/sass/home.scss
@@ -114,11 +114,11 @@
                 z-index: 1;
             }
 
-            .functioning--button {
+            .functioning__item {
                 display: flex;
-                justify-content: center;
+                justify-content: baseline;
                 align-items: center;
-                width: 322px;
+                width: 100%;
                 background: var(--color-grey3);
                 box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
                 border-radius: 20px;
@@ -132,7 +132,7 @@
                     color: var(--color-grey4);
                 }
 
-                &:hover i {
+                & .fa-store {
                     color: var(--color-purple);
                 }
 
