--- a/css/home.css
+++ b/css/home.css
@@ -11,7 +11,7 @@
   margin: 0;
   background-color: white;
   z-index: 1000;
-  animation: loader 3s ease-in-out forwards;
+  animation: loader 2s ease-in-out forwards;
 }
 
 .loader__circle {
@@ -23,7 +23,7 @@
   border-top: 4px solid var(--color-purple);
   border-right: 4px solid transparent;
   box-sizing: border-box;
-  animation: rotation 3s linear infinite;
+  animation: rotation 2s linear infinite;
 }
 
 .loader__circle::after {
@@ -37,7 +37,7 @@
   border-radius: 50%;
   border-left: 4px solid var(--color-green);
   border-bottom: 4px solid transparent;
-  animation: rotation 1.5s linear infinite reverse;
+  animation: rotation 1s linear infinite reverse;
 }
 
 @keyframes rotation {
@@ -76,17 +76,41 @@
   z-index: 1;
   cursor: pointer;
 }
+.heart path {
+  stroke: var(--color-black);
+  stroke-dasharray: 70;
+  stroke-dashoffset: 0;
+}
 
-.heart-checkbox:checked + label .heart {
+.heart-checkbox:checked + label .heart path {
   fill: url(#paint0_linear_148695_527);
   stroke: url(#paint0_linear_148695_527);
 }
 
-.heart-checkbox:hover + label .heart {
-  fill: url(#paint0_linear_148695_527);
-  stroke: url(#paint0_linear_148695_527);
+.heart-checkbox:not(:checked):hover + label .heart path {
+  animation: heart 2s linear forwards;
 }
 
+@keyframes heart {
+  0% {
+    stroke-dashoffset: 0;
+    stroke: url(#paint0_linear_148695_527);
+  }
+  40% {
+    stroke-dashoffset: 70;
+    stroke: url(#paint0_linear_148695_527);
+  }
+  80% {
+    stroke-dashoffset: 140;
+    stroke: url(#paint0_linear_148695_527);
+    fill: transparent;
+  }
+  100% {
+    stroke-dashoffset: 140;
+    stroke: url(#paint0_linear_148695_527);
+    fill: url(#paint0_linear_148695_527);
+  }
+}
 .header {
   position: relative;
   display: flex;
@@ -190,6 +214,36 @@ a {
   overflow: hidden;
 }
 
+@keyframes slide-up {
+  0% {
+    opacity: 0;
+    transform: translateY(100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+@keyframes slide-down {
+  0% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+@keyframes slide-left {
+  0% {
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
 .location {
   display: flex;
   justify-content: center;
@@ -208,7 +262,7 @@ a {
   padding: 2px;
   width: 124px;
   border: transparent;
-  text-align: center;
+  text-align: left;
   background-color: var(--color-grey2);
 }
 .location .location__name::placeholder {
@@ -231,6 +285,9 @@ a {
   align-items: center;
   background-color: var(--color-grey3);
   text-align: center;
+  opacity: 0;
+  animation: slide-down 3s forwards;
+  animation-delay: 1s;
 }
 .section__booking .booking--title {
   font-size: 24px;
@@ -251,15 +308,18 @@ a {
   font-size: 16px;
   font-weight: 500;
   padding: 14px 18px;
-  text-align: center;
-  color: var(--color-white);
   margin: 28px 0 58px 0;
   border: transparent;
   cursor: pointer;
+  transition: all 0.3s ease-in-out;
 }
 .section__booking .booking--button:hover {
   background: linear-gradient(0deg, rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0.15) 100%), linear-gradient(201deg, var(--color-purple) -5.2%, var(--color-pink) 110.74%);
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.35);
+}
+.section__booking .booking--button .booking--button__link {
+  text-align: center;
+  color: var(--color-white);
 }
 
 .section__functioning .functioning--title {
@@ -268,11 +328,28 @@ a {
   margin: 48px 0 2px 20px;
 }
 .section__functioning .functioning--list {
-  margin: 0;
+  margin: auto;
+  padding: 0;
+  width: calc(100% - 40px);
   list-style-type: none;
 }
 .section__functioning .functioning--list .functioning--list__item {
   position: relative;
+  opacity: 0;
+  margin-top: 24px;
+  margin-bottom: 12px;
+}
+.section__functioning .functioning--list .functioning--list__item:nth-child(1) {
+  animation: slide-left 3s forwards;
+  animation-delay: 1.4s;
+}
+.section__functioning .functioning--list .functioning--list__item:nth-child(2) {
+  animation: slide-left 3s forwards;
+  animation-delay: 1.6s;
+}
+.section__functioning .functioning--list .functioning--list__item:nth-child(3) {
+  animation: slide-left 3s forwards;
+  animation-delay: 1.8s;
 }
 .section__functioning .functioning--list .functioning--list__item:before {
   content: counter(mycounter);
@@ -301,7 +378,6 @@ a {
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
   border-radius: 20px;
   border: transparent;
-  margin-top: 24px;
   padding: 28px 38px;
   cursor: pointer;
 }
@@ -344,6 +420,23 @@ a {
   background-color: var(--color-white);
   border-radius: 15px;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1);
+  opacity: 0;
+}
+.section__restaurants .restaurants--card .cards:nth-child(1) {
+  animation: slide-left 3s forwards;
+  animation-delay: 1.4s;
+}
+.section__restaurants .restaurants--card .cards:nth-child(2) {
+  animation: slide-left 3s forwards;
+  animation-delay: 1.6s;
+}
+.section__restaurants .restaurants--card .cards:nth-child(3) {
+  animation: slide-left 3s forwards;
+  animation-delay: 1.8s;
+}
+.section__restaurants .restaurants--card .cards:nth-child(4) {
+  animation: slide-left 3s forwards;
+  animation-delay: 2s;
 }
 .section__restaurants .restaurants--card .cards .restaurants--card__figure {
   position: relative;
@@ -388,6 +481,450 @@ a {
   margin-bottom: 12px;
   font-size: 17px;
   font-weight: 300;
+}
+
+@media screen and (min-width: 750px) {
+  .section__booking .booking--title {
+    font-size: 32px;
+  }
+  .section__functioning .container__home {
+    width: 80%;
+  }
+  .section__functioning .container__home .functioning--list .functioning--list__item {
+    position: relative;
+    opacity: 0;
+  }
+  .section__functioning .container__home .functioning--list .functioning--list__item:before {
+    content: counter(mycounter);
+    counter-increment: mycounter;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 24px;
+    height: 24px;
+    background-color: var(--color-purple);
+    border-radius: 50%;
+    top: 50%;
+    transform: translateY(-50%);
+    left: -12px;
+    color: var(--color-white);
+    font-size: 12px;
+    z-index: 1;
+  }
+  .section__functioning .container__home .functioning--list .functioning--list__item .functioning__item {
+    display: flex;
+    justify-content: baseline;
+    align-items: center;
+    width: 100%;
+    background: var(--color-grey3);
+    box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
+    border-radius: 20px;
+    border: transparent;
+    padding: 28px 38px;
+    cursor: pointer;
+  }
+  .section__functioning .container__home .functioning--list .functioning--list__item .functioning__item i {
+    font-size: 20px;
+    color: var(--color-grey4);
+  }
+  .section__functioning .container__home .functioning--list .functioning--list__item .functioning__item .fa-store {
+    color: var(--color-purple);
+  }
+  .section__functioning .container__home .functioning--list .functioning--list__item .functioning__item .functioning__item--text {
+    margin: 0;
+    margin-left: 26px;
+    font-family: "Roboto";
+    font-size: 16px;
+    font-weight: 500;
+  }
+  .section__restaurants {
+    background-color: var(--color-grey3);
+    margin-top: 68px;
+    padding-bottom: 66px;
+  }
+  .section__restaurants .container__home {
+    width: 80%;
+    margin: auto;
+  }
+  .section__restaurants .container__home .restaurants--title {
+    font-size: 24px;
+    font-weight: 700;
+    margin-left: 20px;
+  }
+  .section__restaurants .container__home .restaurants--card {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    row-gap: 20px;
+    overflow: hidden;
+  }
+  .section__restaurants .container__home .restaurants--card .cards {
+    position: relative;
+    width: calc(50% - 20px);
+    margin-bottom: 18px;
+    background-color: var(--color-white);
+    border-radius: 15px;
+    box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1);
+    opacity: 0;
+  }
+  .section__restaurants .container__home .restaurants--card .cards:nth-child(1) {
+    animation: slide-left 3s forwards;
+    animation-delay: 1.4s;
+  }
+  .section__restaurants .container__home .restaurants--card .cards:nth-child(2) {
+    animation: slide-left 3s forwards;
+    animation-delay: 1.6s;
+  }
+  .section__restaurants .container__home .restaurants--card .cards:nth-child(3) {
+    animation: slide-left 3s forwards;
+    animation-delay: 1.8s;
+  }
+  .section__restaurants .container__home .restaurants--card .cards:nth-child(4) {
+    animation: slide-left 3s forwards;
+    animation-delay: 2s;
+  }
+  .section__restaurants .container__home .restaurants--card .cards .restaurants--card__figure {
+    position: relative;
+    width: 100%;
+    height: 174px;
+    border-radius: 15px 15px 0 0;
+    overflow: hidden;
+  }
+  .section__restaurants .container__home .restaurants--card .cards .restaurants--card__figure .card__figure--img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .section__restaurants .container__home .restaurants--card .cards .restaurants--card__figure .card__figure--tag {
+    position: absolute;
+    top: 12px;
+    right: 12px;
+    border-radius: 2px;
+    padding: 6px 8px;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 500;
+    background-color: var(--color-green);
+    color: var(--color-green2);
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
+  }
+  .section__restaurants .container__home .restaurants--card .cards .restaurants--card__description {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 26px 0 14px;
+  }
+  .section__restaurants .container__home .restaurants--card .cards .restaurants--card__description .card__description--text .card__title {
+    font-size: 18px;
+    font-weight: 700;
+    margin: 16px 0 4px 0;
+  }
+  .section__restaurants .container__home .restaurants--card .cards .restaurants--card__description .card__description--text .card__subtitle {
+    margin: 0;
+    margin-bottom: 12px;
+    font-size: 17px;
+    font-weight: 300;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .section__booking .booking--title {
+    font-size: 40px;
+  }
+  .section__functioning {
+    width: 85%;
+  }
+  .section__functioning .functioning--list {
+    display: flex;
+    justify-content: space-between;
+  }
+  .section__functioning .functioning--list .functioning--list__item {
+    width: calc(33.3333333333% - 2em);
+    position: relative;
+    opacity: 0;
+  }
+  .section__functioning .functioning--list .functioning--list__item:before {
+    content: counter(mycounter);
+    counter-increment: mycounter;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 24px;
+    height: 24px;
+    background-color: var(--color-purple);
+    border-radius: 50%;
+    top: 50%;
+    transform: translateY(-50%);
+    left: -12px;
+    color: var(--color-white);
+    font-size: 12px;
+    z-index: 1;
+  }
+  .section__functioning .functioning--list .functioning--list__item .functioning__item {
+    display: flex;
+    justify-content: baseline;
+    align-items: center;
+    width: 100%;
+    background: var(--color-grey3);
+    box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
+    border-radius: 20px;
+    border: transparent;
+    padding: 28px 38px;
+    cursor: pointer;
+  }
+  .section__functioning .functioning--list .functioning--list__item .functioning__item i {
+    font-size: 20px;
+    color: var(--color-grey4);
+  }
+  .section__functioning .functioning--list .functioning--list__item .functioning__item .fa-store {
+    color: var(--color-purple);
+  }
+  .section__functioning .functioning--list .functioning--list__item .functioning__item .functioning__item--text {
+    margin: 0;
+    margin-left: 26px;
+    font-family: "Roboto";
+    font-size: 16px;
+    font-weight: 500;
+  }
+  .section__restaurants {
+    background-color: var(--color-grey3);
+    margin-top: 68px;
+    padding-bottom: 66px;
+  }
+  .section__restaurants .restaurants--title {
+    font-size: 24px;
+    font-weight: 700;
+    margin-left: 20px;
+  }
+  .section__restaurants .restaurants--card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    overflow: hidden;
+  }
+  .section__restaurants .restaurants--card .cards {
+    position: relative;
+    width: calc(100% - 40px);
+    margin-bottom: 18px;
+    background-color: var(--color-white);
+    border-radius: 15px;
+    box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1);
+    opacity: 0;
+  }
+  .section__restaurants .restaurants--card .cards:nth-child(1) {
+    animation: slide-left 3s forwards;
+    animation-delay: 1.4s;
+  }
+  .section__restaurants .restaurants--card .cards:nth-child(2) {
+    animation: slide-left 3s forwards;
+    animation-delay: 1.6s;
+  }
+  .section__restaurants .restaurants--card .cards:nth-child(3) {
+    animation: slide-left 3s forwards;
+    animation-delay: 1.8s;
+  }
+  .section__restaurants .restaurants--card .cards:nth-child(4) {
+    animation: slide-left 3s forwards;
+    animation-delay: 2s;
+  }
+  .section__restaurants .restaurants--card .cards .restaurants--card__figure {
+    position: relative;
+    width: 100%;
+    height: 174px;
+    border-radius: 15px 15px 0 0;
+    overflow: hidden;
+  }
+  .section__restaurants .restaurants--card .cards .restaurants--card__figure .card__figure--img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .section__restaurants .restaurants--card .cards .restaurants--card__figure .card__figure--tag {
+    position: absolute;
+    top: 12px;
+    right: 12px;
+    border-radius: 2px;
+    padding: 6px 8px;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 500;
+    background-color: var(--color-green);
+    color: var(--color-green2);
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
+  }
+  .section__restaurants .restaurants--card .cards .restaurants--card__description {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 26px 0 14px;
+  }
+  .section__restaurants .restaurants--card .cards .restaurants--card__description .card__description--text .card__title {
+    font-size: 18px;
+    font-weight: 700;
+    margin: 16px 0 4px 0;
+  }
+  .section__restaurants .restaurants--card .cards .restaurants--card__description .card__description--text .card__subtitle {
+    margin: 0;
+    margin-bottom: 12px;
+    font-size: 17px;
+    font-weight: 300;
+  }
+}
+@media screen and (min-width: 1150px) {
+  .section__booking .booking--title {
+    font-size: 40px;
+  }
+  .section__functioning {
+    width: 85%;
+  }
+  .section__functioning .functioning--list {
+    display: flex;
+    justify-content: space-between;
+  }
+  .section__functioning .functioning--list .functioning--list__item {
+    width: calc(33.3333333333% - 2em);
+    position: relative;
+    opacity: 0;
+  }
+  .section__functioning .functioning--list .functioning--list__item:before {
+    content: counter(mycounter);
+    counter-increment: mycounter;
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 24px;
+    height: 24px;
+    background-color: var(--color-purple);
+    border-radius: 50%;
+    top: 50%;
+    transform: translateY(-50%);
+    left: -12px;
+    color: var(--color-white);
+    font-size: 12px;
+    z-index: 1;
+  }
+  .section__functioning .functioning--list .functioning--list__item .functioning__item {
+    display: flex;
+    justify-content: baseline;
+    align-items: center;
+    width: 100%;
+    background: var(--color-grey3);
+    box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
+    border-radius: 20px;
+    border: transparent;
+    padding: 28px 38px;
+    cursor: pointer;
+  }
+  .section__functioning .functioning--list .functioning--list__item .functioning__item i {
+    font-size: 20px;
+    color: var(--color-grey4);
+  }
+  .section__functioning .functioning--list .functioning--list__item .functioning__item .fa-store {
+    color: var(--color-purple);
+  }
+  .section__functioning .functioning--list .functioning--list__item .functioning__item .functioning__item--text {
+    margin: 0;
+    margin-left: 26px;
+    font-family: "Roboto";
+    font-size: 16px;
+    font-weight: 500;
+    text-wrap: nowrap;
+  }
+  .section__restaurants {
+    background-color: var(--color-grey3);
+    margin-top: 68px;
+    padding-bottom: 66px;
+  }
+  .section__restaurants .restaurants--title {
+    font-size: 24px;
+    font-weight: 700;
+    margin-left: 20px;
+  }
+  .section__restaurants .restaurants--card {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    overflow: hidden;
+  }
+  .section__restaurants .restaurants--card .cards {
+    position: relative;
+    width: calc(100% - 40px);
+    margin-bottom: 18px;
+    background-color: var(--color-white);
+    border-radius: 15px;
+    box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1);
+    opacity: 0;
+  }
+  .section__restaurants .restaurants--card .cards:nth-child(1) {
+    animation: slide-left 3s forwards;
+    animation-delay: 1.4s;
+  }
+  .section__restaurants .restaurants--card .cards:nth-child(2) {
+    animation: slide-left 3s forwards;
+    animation-delay: 1.6s;
+  }
+  .section__restaurants .restaurants--card .cards:nth-child(3) {
+    animation: slide-left 3s forwards;
+    animation-delay: 1.8s;
+  }
+  .section__restaurants .restaurants--card .cards:nth-child(4) {
+    animation: slide-left 3s forwards;
+    animation-delay: 2s;
+  }
+  .section__restaurants .restaurants--card .cards .restaurants--card__figure {
+    position: relative;
+    width: 100%;
+    height: 174px;
+    border-radius: 15px 15px 0 0;
+    overflow: hidden;
+  }
+  .section__restaurants .restaurants--card .cards .restaurants--card__figure .card__figure--img {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+  .section__restaurants .restaurants--card .cards .restaurants--card__figure .card__figure--tag {
+    position: absolute;
+    top: 12px;
+    right: 12px;
+    border-radius: 2px;
+    padding: 6px 8px;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 14px;
+    font-weight: 500;
+    background-color: var(--color-green);
+    color: var(--color-green2);
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
+  }
+  .section__restaurants .restaurants--card .cards .restaurants--card__description {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 26px 0 14px;
+  }
+  .section__restaurants .restaurants--card .cards .restaurants--card__description .card__description--text .card__title {
+    font-size: 18px;
+    font-weight: 700;
+    margin: 16px 0 4px 0;
+  }
+  .section__restaurants .restaurants--card .cards .restaurants--card__description .card__description--text .card__subtitle {
+    margin: 0;
+    margin-bottom: 12px;
+    font-size: 17px;
+    font-weight: 300;
+  }
 }
 
 /*# sourceMappingURL=home.css.map */
