--- a/css/restaurants.css
+++ b/css/restaurants.css
@@ -11,7 +11,7 @@
   margin: 0;
   background-color: white;
   z-index: 1000;
-  animation: loader 3s ease-in-out forwards;
+  animation: loader 2s ease-in-out forwards;
 }
 
 .loader__circle {
@@ -23,7 +23,7 @@
   border-top: 4px solid var(--color-purple);
   border-right: 4px solid transparent;
   box-sizing: border-box;
-  animation: rotation 3s linear infinite;
+  animation: rotation 2s linear infinite;
 }
 
 .loader__circle::after {
@@ -37,7 +37,7 @@
   border-radius: 50%;
   border-left: 4px solid var(--color-green);
   border-bottom: 4px solid transparent;
-  animation: rotation 1.5s linear infinite reverse;
+  animation: rotation 1s linear infinite reverse;
 }
 
 @keyframes rotation {
@@ -76,17 +76,41 @@
   z-index: 1;
   cursor: pointer;
 }
+.heart path {
+  stroke: var(--color-black);
+  stroke-dasharray: 70;
+  stroke-dashoffset: 0;
+}
 
-.heart-checkbox:checked + label .heart {
+.heart-checkbox:checked + label .heart path {
   fill: url(#paint0_linear_148695_527);
   stroke: url(#paint0_linear_148695_527);
 }
 
-.heart-checkbox:hover + label .heart {
-  fill: url(#paint0_linear_148695_527);
-  stroke: url(#paint0_linear_148695_527);
+.heart-checkbox:not(:checked):hover + label .heart path {
+  animation: heart 2s linear forwards;
 }
 
+@keyframes heart {
+  0% {
+    stroke-dashoffset: 0;
+    stroke: url(#paint0_linear_148695_527);
+  }
+  40% {
+    stroke-dashoffset: 70;
+    stroke: url(#paint0_linear_148695_527);
+  }
+  80% {
+    stroke-dashoffset: 140;
+    stroke: url(#paint0_linear_148695_527);
+    fill: transparent;
+  }
+  100% {
+    stroke-dashoffset: 140;
+    stroke: url(#paint0_linear_148695_527);
+    fill: url(#paint0_linear_148695_527);
+  }
+}
 .header {
   position: relative;
   display: flex;
@@ -190,11 +214,44 @@ a {
   overflow: hidden;
 }
 
+@keyframes slide-up {
+  0% {
+    opacity: 0;
+    transform: translateY(100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+@keyframes slide-down {
+  0% {
+    opacity: 0;
+    transform: translateY(-100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+@keyframes slide-left {
+  0% {
+    opacity: 0;
+    transform: translateX(-100%);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
 .banner {
   position: relative;
   width: 100%;
   height: 275px;
   overflow: hidden;
+  opacity: 0;
+  animation: slide-down 3s forwards;
+  animation-delay: 1s;
 }
 .banner .banner__img {
   position: absolute;
@@ -232,6 +289,9 @@ a {
   text-transform: uppercase;
   padding-left: 16px;
   margin: 42px 0 0 0;
+  opacity: 0;
+  animation: slide-up 2s forwards;
+  animation-delay: 1s;
 }
 .menu .section__menu .menu--section__title::after {
   content: "";
@@ -258,9 +318,20 @@ a {
   background-color: var(--color-white);
   border-radius: 15px;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1);
+  opacity: 0;
 }
 .menu .section__menu .menu--section__choices .menu__choice:first-child {
   margin-top: 16px;
+  animation: slide-up 2s forwards;
+  animation-delay: 1.4s;
+}
+.menu .section__menu .menu--section__choices .menu__choice:nth-child(2) {
+  animation: slide-up 2s forwards;
+  animation-delay: 1.8s;
+}
+.menu .section__menu .menu--section__choices .menu__choice:nth-child(3) {
+  animation: slide-up 2s forwards;
+  animation-delay: 2.2s;
 }
 .menu .section__menu .menu--section__choices .menu__choice .menu__input {
   display: none;
@@ -355,6 +426,9 @@ a {
   display: flex;
   justify-content: center;
   align-items: center;
+  animation: slide-up 2s forwards;
+  opacity: 0;
+  animation-delay: 2.6s;
 }
 .menu .button__menu .menu__btn {
   padding: 16px 48px;
@@ -368,6 +442,7 @@ a {
   font-weight: 500;
   border: transparent;
   cursor: pointer;
+  transition: all 0.3s ease-in-out;
 }
 .menu .button__menu .menu__btn:hover {
   background: linear-gradient(0deg, rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0.15) 100%), linear-gradient(201deg, var(--color-purple) -5.2%, var(--color-pink) 110.74%);
