--- a/sass/restaurants.scss
+++ b/sass/restaurants.scss
@@ -9,6 +9,9 @@
     width: 100%;
     height: 275px;
     overflow: hidden;
+    opacity: 0;
+    animation: slide-down 3s forwards;
+    animation-delay: 1s;
 
     .banner__img {
         position: absolute;
@@ -49,6 +52,9 @@
             text-transform: uppercase;
             padding-left: 16px;
             margin: 42px 0 0 0;
+            opacity: 0;
+            animation: slide-up 2s forwards;
+            animation-delay: 1s;
 
             &::after {
                 content: "";
@@ -68,7 +74,7 @@
             flex-direction: column;
             padding: 0;
             margin: 0;
-        
+
             .menu__choice {
                 display: flex;
                 width: calc(100% - 32px);
@@ -77,9 +83,23 @@
                 background-color: var(--color-white);
                 border-radius: 15px;
                 box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.10);
+                opacity: 0;
+                
 
                 &:first-child {
                     margin-top: 16px;
+                    animation: slide-up 2s forwards;
+                    animation-delay: 1.4s;
+                }
+
+                &:nth-child(2) {
+                    animation: slide-up 2s forwards;
+                    animation-delay: 1.8s;
+                }
+
+                &:nth-child(3) {
+                    animation: slide-up 2s forwards;
+                    animation-delay: 2.2s;
                 }
 
                 .menu__input {
@@ -194,7 +214,9 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        
+        animation: slide-up 2s forwards;
+        opacity: 0;
+        animation-delay: 2.6s;
     
         .menu__btn {
             padding: 16px 48px;
@@ -208,6 +230,7 @@
             font-weight: 500;
             border: transparent;
             cursor: pointer;
+            transition: all 0.3s ease-in-out;
     
             &:hover {
                 background: linear-gradient(0deg, rgba(255, 255, 255, 0.15) 0%, rgba(255, 255, 255, 0.15) 100%), linear-gradient(201deg, var(--color-purple) -5.2%, var(--color-pink) 110.74%);
