--- a/sass/restaurants.scss
+++ b/sass/restaurants.scss
@@ -102,6 +102,11 @@
                     animation-delay: 2.2s;
                 }
 
+                &:nth-child(4) {
+                    animation: slide-up 2s forwards;
+                    animation-delay: 2.6s;
+                }
+
                 .menu__input {
                     display: none;
 
