style: correction responsive page restaurants et footer

--- a/css/home.css
+++ b/css/home.css
@@ -158,7 +158,7 @@
 }
 .footer .footer--list .footer--list__item {
   display: flex;
-  justify-content: baseline;
+  justify-content: start;
   align-items: center;
 }
 .footer .footer--list .footer--list__item i {
@@ -175,6 +175,28 @@
   line-height: 2;
 }
 
+@media screen and (min-width: 750px) {
+  .footer {
+    flex-direction: row-reverse;
+    justify-content: end;
+    align-items: center;
+    padding: 30px 26px;
+  }
+  .footer .footer__logo {
+    margin-left: 80px;
+  }
+  .footer .footer--list {
+    display: flex;
+    flex-direction: row;
+    margin: 0;
+  }
+  .footer .footer--list .footer--list__item {
+    margin-left: 10px;
+  }
+  .footer .footer--list .footer--list__item:nth-child(3) {
+    margin-left: 40px;
+  }
+}
 :root {
   --color-purple: #9356DC ;
   --color-pink: #FF79DA;
