correction suite soutenance

--- a/css/home.css
+++ b/css/home.css
@@ -162,6 +162,7 @@
   align-items: center;
 }
 .footer .footer--list .footer--list__item i {
+  width: 16px;
   margin-right: 14px;
 }
 .footer .footer--list .footer--list__item .footer__item--contact {
@@ -659,7 +660,7 @@ a {
     font-size: 40px;
   }
   .section__functioning {
-    width: 85%;
+    width: 100%;
   }
   .section__functioning .functioning--list {
     display: flex;
@@ -806,7 +807,7 @@ a {
     font-size: 40px;
   }
   .section__functioning {
-    width: 85%;
+    width: 100%;
   }
   .section__functioning .functioning--list {
     display: flex;
