--- a/sass/components/footer.scss
+++ b/sass/components/footer.scss
@@ -25,6 +25,7 @@
             align-items: center;
 
             & i {
+                width: 16px;
                 margin-right: 14px;
             }
 
